--- a/apps/memspace-web/src/components/Layout/Layout.module.css
+++ b/apps/memspace-web/src/components/Layout/Layout.module.css
@@ -1,5 +1,9 @@
 .layout {
-  min-height: 100vh;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
 }
