--- a/apps/memspace-web/src/components/PageLayout/PageLayout.module.css
+++ b/apps/memspace-web/src/components/PageLayout/PageLayout.module.css
@@ -6,5 +6,5 @@
 }
 
 .main {
-  margin-top: 2.5rem;
+  padding: 2.5rem 0;
 }
